--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <title>Azure OpenAI 模型管理助手</title>
+    <title>AI Foundry Manager - Azure OpenAI 模型管理助手</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="AI Foundry Manager 是一个用于管理 Azure OpenAI 通道和模型的可视化工具，支持多账号、多区域配置。" />
+    <meta name="author" content="赵利利 (ZetaTechs)" />
+    <meta name="keywords" content="Azure OpenAI, AI Foundry, 模型管理, new-api, one-api" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="AI Foundry Manager" />
+    <meta property="og:description" content="Azure OpenAI 通道模型可视化管理工具" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://github.com/Zeta-ZhaoLi/ai-foundry-manager" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤖</text></svg>">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
